Fix spacing on field level elements

--- a/css/style.css
+++ b/css/style.css
@@ -6868,6 +6868,7 @@ li.node-readmore,
 .field--name-field-blotter-activity,
 .field--name-field-blotter-location,
 .field--name-field-blotter-resolution,
+.field--name-field-department,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
 .field--name-field-event-date-time,
@@ -6980,6 +6981,7 @@ li.node-readmore,
 .field--name-field-blotter-resolution,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
+.field--name-field-event-department,
 .field--name-field-event-location,
 .field--name-field-event-parking,
 .field--name-field-event-participate,
