--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -741,6 +741,7 @@ li.node-readmore,
 .field--name-field-blotter-activity,
 .field--name-field-blotter-location,
 .field--name-field-blotter-resolution,
+.field--name-field-department,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
 .field--name-field-event-date-time,
@@ -873,6 +874,7 @@ li.node-readmore,
 .field--name-field-blotter-resolution,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
+.field--name-field-event-department,
 .field--name-field-event-location,
 .field--name-field-event-parking,
 .field--name-field-event-participate,
